--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,5 @@ python_version = "3.11"
 ignore_missing_imports = true
 warn_unused_ignores = true
 strict = false
+[project.scripts]
+kloros = "kloros.__main__:main"
